--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "network.pokt.pocketsdk"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
