--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
     implementation 'org.jetbrains:annotations:15.0'
     implementation "com.orhanobut:hawk:2.0.1"
     implementation 'com.pvryan.easycrypt:easycrypt:1.3.3'
