--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -35,3 +35,5 @@ dependencies {
     implementation "com.orhanobut:hawk:2.0.1"
     implementation 'com.pvryan.easycrypt:easycrypt:1.3.3'
 }
+
+apply from: rootProject.file('release-bintray.gradle')
